Navbar alignment fixed

--- a/src/App.css
+++ b/src/App.css
@@ -2,7 +2,7 @@
     /* max-width: 1300px; ' */
     
     position: relative;
-    border: red 3px solid;
+    /* border: red 3px solid; */
 
 }
 
