--- a/src/index.css
+++ b/src/index.css
@@ -7,7 +7,7 @@
 }
 
 body {
-  border: red solid 2px;
+  /* border: red solid 2px; */
   color: #fff;
   background-color: #030637;
   padding: 10px;
